<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="aceptar">Aceptar</string>
    <string name="tel_fono">Teléfono</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="ayuda">Ayuda</string>
    <string name="crear_actividad">Crear actividad</string>
    <string name="ajustes">Editar actividad</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="facebook_app_id">559725731403647</string> <string name="fb_login_protocol_scheme">fb559725731403647</string>

</resources>

