<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/ajustes" />
            <item
                android:id="@+id/nav_crear_actividad"
                android:icon="@drawable/ic_create_black_24dp"
                android:title="@string/crear_actividad" />
        </group>

        <item android:title=" ">
            <menu>
                <item
                    android:id="@+id/nav_ayuda"
                    android:title="@string/ayuda" />
                <item
                    android:id="@+id/nav_cerrar"
                    android:title="@string/cerrar_sesi_n" />
            </menu>
        </item>

</menu>